--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -33,6 +33,7 @@
         android:layout_below="@+id/textView0"
         android:layout_margin="10dp"
         android:gravity="bottom"
+        android:singleLine="true"
         />
 
     <TextView
@@ -46,6 +47,7 @@
         android:layout_below="@+id/nameTxtView"
         android:layout_margin="10dp"
         android:gravity="bottom"
+        android:singleLine="true"
         />
 
     <TextView
@@ -59,6 +61,7 @@
         android:layout_below="@+id/emailTxtView"
         android:layout_margin="10dp"
         android:gravity="bottom"
+        android:singleLine="true"
         />
 
     <TextView
