--- a/app/src/main/res/layout/fragment_add_image.xml
+++ b/app/src/main/res/layout/fragment_add_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="#ff737373"
     >
 
     <Button
@@ -21,7 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/btnSelectImgFrgmnt"
-        />
+        android:background="#ffa4a4a4" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,15 +40,23 @@
         android:id="@+id/txtDescFrgmnt"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:maxHeight="60dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Ok"
         android:id="@+id/btnOkFrgmnt"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/txtDescFrgmnt"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginStart="75dp" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:id="@+id/btnCancelFragment"
+        android:layout_below="@+id/txtDescFrgmnt"
+        android:layout_toEndOf="@+id/btnOkFrgmnt" />
 </RelativeLayout>
