--- a/app/src/main/res/layout/custom_row_image_list.xml
+++ b/app/src/main/res/layout/custom_row_image_list.xml
@@ -12,7 +12,12 @@
         android:layout_gravity="fill"
 
         android:adjustViewBounds="true"
-        android:background="#00bbbbbb" />
+        android:background="#00bbbbbb"
+        android:maxHeight="300dp"
+        android:maxWidth="300dp"
+        android:minHeight="300dp"
+        android:minWidth="300dp"
+        android:nestedScrollingEnabled="false" />
 
     <TextView
         android:layout_width="match_parent"
