--- a/app/src/main/res/layout/fragment_add_image.xml
+++ b/app/src/main/res/layout/fragment_add_image.xml
@@ -21,7 +21,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/btnSelectImgFrgmnt"
-        android:background="#ffa4a4a4" />
+        android:background="#ffa4a4a4"
+        android:maxHeight="250dp"
+        android:maxWidth="250dp"
+        android:minHeight="250dp"
+        android:minWidth="250dp"
+        android:nestedScrollingEnabled="false" />
 
     <TextView
         android:layout_width="wrap_content"
