--- a/app/src/main/res/menu/menu_logged_account.xml
+++ b/app/src/main/res/menu/menu_logged_account.xml
@@ -6,7 +6,12 @@
         android:orderInCategory="100" app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_logOut"
+        android:id="@+id/action_CreateAccountLoggedAccount"
+        android:title="Create Account"
+
+        />
+    <item
+        android:id="@+id/action_logOutLoggedAccount"
         android:title="Log Out"
 
         />
