--- a/app/src/main/res/layout/activity_logged_account.xml
+++ b/app/src/main/res/layout/activity_logged_account.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.chamod.backupalbumfinal.LoggedAccountActivity">
+    tools:context="com.example.chamod.backupalbumfinal.Activities.LoggedAccountActivity">
 
     <Button
         android:layout_width="50dp"
@@ -33,6 +33,14 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
     </RelativeLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update Albums"
+        android:id="@+id/btnUpdateAlbums"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/listLayoutAlbums" />
 
 
 </RelativeLayout>
