--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.chamod.backupalbumfinal.NewAccountActivity">
+    tools:context="com.example.chamod.backupalbumfinal.Activities.NewAccountActivity">
 
 
     <TextView
