--- a/app/src/main/res/menu/menu_logged_account.xml
+++ b/app/src/main/res/menu/menu_logged_account.xml
@@ -1,10 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.chamod.backupalbumfinal.LoggedAccountActivity">
+    tools:context="com.example.chamod.backupalbumfinal.Activities.LoggedAccountActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 
+
+    <item
+        android:id="@+id/action_UpdateAlbumsLoggedAccount"
+        android:title="Update Album"
+
+        />
     <item
         android:id="@+id/action_CreateAccountLoggedAccount"
         android:title="Create Account"
