--- a/app/src/main/res/menu/menu_opened_album.xml
+++ b/app/src/main/res/menu/menu_opened_album.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.chamod.backupalbumfinal.OpenedAlbumActivity">
+    tools:context="com.example.chamod.backupalbumfinal.Activities.OpenedAlbumActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_UpdateAlbumOpenedAlbum"
+        android:title="Update Album"
+
+        />
     <item
         android:id="@+id/action_CreateAccountOpenedAlbum"
         android:title="Create Account"
